<resources>
    <string name="app_name">CheckKeeper</string>
    <string name="Take_picture">Расположите QR код в зеленой рамке</string>
    <string name="reset_fns_psw">Обновить пароль ФНС</string>
    <string name="enter_phone">Введите номер телефона</string>
    <string name="Settings_NameField">Имя</string>
    <string name="SurnameField">Фамилия</string>
    <string name="E_mailAdress">E-mail</string>
    <string name="UserDataEddedSuccesfuly">Данные пользователя сохранены</string>
    <string name="firstTimeEnter">Для дальнейшей работы приложения необходимо пройти авторизацию на
        сервере ФНС nalog.ru. \nНажмите ОК, чтобы авторизоваться.
    </string>
    <string name="titleGreetingMessage">Вимание!</string>
    <string name="ButtonOK">OK</string>
    <string name="getNewPswFNS">Указанный Вами пароль для доступа к серверу ФНС устарел или неправильный.\nВведите новый пароль или обновите его автоматически.</string>
    <string name="errorUserAlreadyRegistered">Возможно вы уже зарегистрированы, необходимо сбросить пароль</string>
    <string name="showPersonalData">Учетные данные</string>
    <string name="action_about">About</string>
    <string name="item_deleted">Item deleted</string>
    <string name="item_undo">Undo</string>
    <string name="today">Today</string>
    <string name="community">Our G+ community</string>
    <string name="honey_neutrons">Honey neutrons</string>
    <string name="choose_date">Выберите дату</string>
    <string name="ready">Готово</string>
    <string name="connectionError">Невозможно подключиться к серверу, проверьте Интернет соединение и повторите
        попытку.
    </string>
    <string name="btnCancel">Отмена</string>
    <string name="btnOk">OK</string>
    <string name="title_addAccointingList">Добавить список</string>
    <string name="title_allLists">Все списки</string>
    <string name="rename_btn">Переименовать</string>
    <string name="delete_btn">Удалить</string>
    <string name="showAccountingLists">Списки покупок</string>
    <string name="accountingListTitle">Списки затрат</string>
    <string name="invoicesListTitle">Учтеные чеки</string>
    <string name="addBtn">Добавить</string>
    <string name="purchasListTitle">Покупка</string>
    <string name="title_activity_maps">Map</string>
    <string name="finde_store_on_map">Укажите магазин на карте</string>
    <string name="signCompos">\&#xD7;</string>
    <string name="errorGetFrom_FNS">Сервер недоступен</string>
    <string name="loading_invoice_from_FNS">Идет загрузка...</string>
    <string name="Single">За день</string>
    <string name="Multi">Несколько дней</string>
    <string name="Range">Период</string>
    <string name="Done">Готово</string>
    <string name="linkedListPageTitle">Закрепленные</string>
    <string name="title_pinAccointingList">Закрепить</string>
    <string name="title_UnPinAccointingList">Открепить</string>
    <string name="waiting_for_loading_invoice_from_FNS">Ожидание загрузки</string>
    <string name="invoicesBasketListTitle">Корзина</string>
    <string name="empty">ничего нет</string>
    <string name="pick_image_intent_text">Выбрать фотографию</string>
    <string name="title_setPhoto">Изменить фотографию</string>
    <string name="title_addinvoicemanual">Добавить данные чека</string>
    <string name="title_addinvoicemanualFP">Укажите ФП из чека</string>
    <string name="title_addinvoicemanualFN">Укажите ФН из чека</string>
    <string name="title_addinvoicemanualFD">Укажите ФД из чека</string>
    <string name="acces_forbidden_to_FNS">Пароль устарел</string>
    <string name="not_found_in_FNS">Не найден</string>
    <string name="not_acceptable_in_FNS">Нет данных</string>
    <string name="title_storeName">Название магазина</string>
    <string name="title_storeAddress">Адрес магазина</string>
    <string name="title_storeType">Тип магазина</string>
    <string name="load_inv_from_img_menu">Загрузить чек</string>
    <string name="invoice_load_from_image_error">Не удалось загрузить чек</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="purchasesPageTitle">Информация по чеку</string>
    <string name="invoicesLoadingListTitle">Загрузка</string>
    <string name="loadingInvoicesTitle">Загрузка</string>
    <string name="sumOfInvoice">Сумма покупки</string>
    <string name="dateOfInvoice">Дата покупки</string>
    <string name="invoicesNOTitleTitle">Чеки</string>
    <string name="title_removePhoto">Удалить фотографию</string>
    <string name="makeBackupTitle">Резервная копия</string>
    <string name="backUpReady">Выполнено резервное копирование:</string>
    <string name="changeTheme">изменить тему</string>
    <string name="settings">Настройки</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_default_theme">По умолчанию</string>
    <string name="title_orange_theme">Оранжевая</string>
    <string-array name="pref_example_list_thems_titles">
        <item>@string/title_default_theme</item>
        <item>@string/title_orange_theme</item>
    </string-array>
    <string-array name="pref_example_list_thems_values">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="summary_app_preference">Внешний вид, синхронизация, резервное копирование</string>
    <string name="summary_user_data_preference">Регистрационные данные для подключения в ФНС</string>
    <string name="settings_field_empty_error">Поле не может быть пустым</string>
    <string name="settings_phone_number">Номер телефона</string>
    <string name="Settings_NameField_message">Введие имя</string>
    <string name="Settings_SurnameField_message">Введите фамилию</string>
    <string name="Settings_phone_number_message">Введите номер телефона в формате\n+7 XXX XXX XXXX</string>
    <string name="Settings_E_mailAdress_message">Используется для отправки электронных копий чеков</string>
    <string name="Settings_E_mailAdress_title">Введите e-mail адрес</string>
    <string name="settings_field_input_error">Ощибка ввода, повторите попытку</string>
    <string name="settings_password_FNS_text">Пароль ФНС</string>
    <string name="Settings_password_FNS_message">Введите пароль, полученый при регистрации в ФНС</string>
    <string name="settings_appSettings_summary">Тема, синхронизация и прочие найстроки приложения</string>
    <string name="settings_appSettings_text">Настройки приложения</string>
    <string name="settings_userSettings_text">Учетная запись</string>
    <string name="settings_userSettings_summary">Данные пользователя: ФИО, пароль, e-mail, телефон…</string>
    <string name="settings_ThemeSettings_text">Выбор темы</string>
    <string name="settings_ThemeSettings_summary">Нажмите чтобы выбрать возможное цветовое оформление</string>
    <string name="Settings_ThemesChoice">Тема</string>
    <string name="Settings_ThemesChoice_message">Выберите цветовое оформление</string>
    <string name="theme_updated_need_reload">Тема обновлена, необходимо перезапустить приложение</string>
    <string name="press_back_to_exit">Нажмити еще раз для выхода</string>
    <string name="settings_input_data_incorrect">Неверный ввод</string>
    <string name="restoreFromBackupTitle">Восстановить</string>
    <string name="QRData_Error">Отсканирован некорректный QR-код</string>
    <string name="personal_data_request_AlreadyRegister">Ваша учетная запись была создана ранее, необходимо обновить
        пароль
    </string>
    <string name="personal_data_request_BadRequest">Ошибка, проверьте введеные данные и повторите еще раз</string>
    <string name="personal_data_request_UserRegistered">Удачная регистрация</string>
    <string name="personal_data_request_PasswordRequested">Запрос на сброс пароля успешно отправлен</string>
    <string name="personal_data_request_PasswordUpdated">Пароль успешно обновлен</string>
    <string name="Settings_PasswField">Пароль</string>
    <string name="Settings_PasswField_message">Введите полученный ранее пароль</string>
    <string name="personal_data_request_PasswordSaved">Пароль успешно сохранен</string>
    <string name="btnReset">Обновить</string>
    <string name="btnManual">Ввести</string>
    <string name="title_setOnMap">Указать на карте</string>
    <string name="title_setName">Изменить название</string>
    <string name="sight_camera_on_qr_code">Наведите камеру на QR-код\nПосле фокусировки штрихкод автоматически распознается</string>
    <string name="invoice_date_name_text">Дата покупки:</string>
    <string name="invoice_count_name_text">Количество товаров в чеке:</string>
    <string name="invoice_sum_name_text">Итого по чеку:</string>
    <string name="default_icon_name_product_category">ic_product_category_default</string>
    <string name="accountingList_default">Общие расходы</string>
    <string name="title_category_products">Категории товаров</string>
    <string name="alcho_icon_name_product_category">ic_product_category_alcho_48</string>
    <string name="button_select_category">Выберите категорию</string>
    <string name="categories_category_chooser_button_title">Присвоить категорию</string>
    <string name="error_select_category">Выберите категорию</string>
    <string name="greetings_text">Приветствуем Вас в нашем приложении!\nДля продолжения работы необходимо пройти регистрацию
        в официальном приложении ФНС \"Проверка кассового чека\" после чего ввести регистрационную информацию.
    </string>
    <string name="link_to_FNS_app_text">Перейти в приложение\n\"Проверка кассового чека\"</string>
    <string name="auto_registration_checkbox_text">Зарегистрироваться автоматически</string>
    <string name="button_registration_text">Сохранить</string>
    <string name="button_save_text">Сохранить</string>
    <string name="settings_personalData_text">Как к Вам обращаться</string>
    <string name="requested_field_error">Обязательное поле</string>
    <string name="error_fill_form">Необходимо заполнить все поля формы</string>
    <string name="greetings_text_2">Использую наше приложение, вы можете пройти автоматическую регистрацию\nЕсли вы хотите использовать off-line версию приложения нажимте \"Ok\"\n
    Позже вы сможете переключиться на on-line версию в настройках приложения</string>
    <string name="error_file_not_found_call_admin">Ошибка создания файла, обратитесь к разработчику</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Регистрация</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Пароль</string>
    <string name="button_sign_in">Войти</string>
    <string name="sing_up">Регистрация</string>
    <string name="settings_On_lineSettings_text">On-line версия</string>
    <string name="settings_On_lineSettings_ON_summary">Вкл</string>
    <string name="settings_On_lineSettings_OFF_summary">Выкл</string>
    <string name="settings_On_lineSettings_On_message">Внимание!\nВключая On-Line версию вы автоматически соглашаетесь на
        хранение данных на сервере приложения, обработку данных из чеков для улучшения сервиса и предоставления
        дополнительного функционала.
    </string>
    <string name="settings_On_lineSettings_Off_message">Отключение On-line функции не приведет к удалению ваших данных с
        сервера, в дальнейшем все ваши данные будут сохраняться только на вашем телефоне.
    </string>
    <string name="googleloginText">Sign in</string>
    <string name="greetings_text_3">Или используйте on-line версию</string>
    <string name="settings_On_lineNav_manu_text">On-Line</string>
    <string name="settings_OFF_lineNav_manu_text">Off-Line</string>
    <string name="add_new_invoice">Проверка чека</string>
    <string name="loading_invoice_from_Server">Синхронизация с сервером</string>
    <string name="add_new_product_category">Добавить</string>
    <string name="create_new_category">Создание категории</string>
</resources>