<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/invoicesListTitle"
          android:id="@+id/invoicesPage"
          app:actionViewClass="android.widget.TextView"
          android:enabled="true"/>
    <item android:title="@string/invoicesLoadingListTitle"
          android:id="@+id/invoicesLoadingPage"
          app:actionViewClass="android.widget.TextView"
          android:enabled="true"/>
    <item android:title="@string/accountingListTitle"
          android:id="@+id/accountingListPAge"
          app:actionViewClass="android.widget.TextView"
          android:enabled="true"/>
    <item android:title="@string/linkedListPageTitle"
          android:id="@+id/linkedListPage"
          android:icon="@drawable/ic_star_black_24dp"
          app:actionViewClass="android.widget.TextView"
          android:enabled="true"/>
    <item android:title="@string/invoicesBasketListTitle"
          android:id="@+id/busketListPage"
          android:icon="@drawable/trash_bin_delete_button"
          app:actionViewClass="android.widget.TextView"
          android:enabled="true"/>
    <item android:title="@string/makeBackupTitle"
          android:id="@+id/makeBackup"
          android:icon="@drawable/ic_backup_black_24dp"
          app:actionViewClass="android.widget.TextView"
          android:enabled="true"/>

    <item android:title="@string/settings"
          android:id="@+id/settings"
          app:actionViewClass="android.widget.TextView"
          android:icon="@drawable/ic_settings_black_24dp"
          android:enabled="true"/>

</menu>