<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group android:id="@+id/menugroup1" >
        <item
                android:id="@+id/setPhoto"
                android:title="@string/title_setPhoto"
                android:icon="@drawable/baseline_add_white_24dp"
                android:orderInCategory="100"
        />
        <item
                android:id="@+id/setName"
                android:title="@string/title_setName"
                android:icon="@drawable/baseline_add_white_24dp"
                android:orderInCategory="100"
        />
        <item
                android:id="@+id/setOnMap"
                android:title="@string/title_setOnMap"
                android:icon="@drawable/baseline_add_white_24dp"
                android:orderInCategory="100"
        />
        <item
                android:id="@+id/removePhoto"
                android:title="@string/title_removePhoto"
                android:icon="@drawable/baseline_add_white_24dp"
                android:orderInCategory="100"
        />
    </group>

</menu>