<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/NameField"
            android:ems="10"
            android:focusedByDefault="false"
            android:id="@+id/NameField"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/SurnameField"
            android:focusedByDefault="false"
            android:ems="10"
            android:id="@+id/SurnameField"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/E_mailAdress"
            android:ems="10"
            android:focusedByDefault="false"
            android:id="@+id/e_mail"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/enter_phone"
            android:ems="10"
            android:focusedByDefault="false"
            android:id="@+id/phone"/>
    <Button
            android:text="@string/ButtonOK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/OKbtn"
            android:onClick="onClick_OKBtn"/>
</LinearLayout>