<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
            android:id="@+id/registration_layout"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:orientation="vertical"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_margin="15dp"
                          android:layout_centerInParent="true"
                          android:gravity="center">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp">
                    <CheckBox
                            android:id="@+id/auto_registration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/auto_registration_checkbox_text"
                            android:checked="false"
                            style="@style/TextAppeareance"
                            android:textSize="15sp"/>

                    <android.support.design.widget.TextInputLayout
                            android:id="@+id/personalData_layout"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:layout_marginTop="10dp"
                            android:visibility="gone">
                        <EditText
                                android:id="@+id/personalData"
                                android:inputType="text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/settings_personalData_text"
                                android:textSize="17sp"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                            android:id="@+id/e_mail_layout"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:layout_marginTop="10dp"
                            android:visibility="visible">
                        <EditText
                                android:id="@+id/e_mail"
                                android:inputType="textEmailAddress"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/Settings_E_mailAdress_title"
                                android:textSize="17sp"/>
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Settings_E_mailAdress_message"
                                style="@style/TextAppeareance"
                                android:textSize="15sp"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                            android:id="@+id/phone_number_layout"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:layout_marginTop="10dp">
                        <EditText
                                android:id="@+id/phone_number"
                                android:inputType="phone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/settings_phone_number"
                                android:text="+7"
                                android:textSize="17sp"/>
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Settings_phone_number_message"
                                style="@style/TextAppeareance"
                                android:textSize="15sp"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                            android:id="@+id/password_fns_layout"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:layout_marginTop="10dp">
                        <EditText
                                android:id="@+id/password_fns"
                                android:inputType="textPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/settings_password_FNS_text"
                                android:textSize="17sp"/>
                    </android.support.design.widget.TextInputLayout>

                    <Button
                            android:id="@+id/button_registration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/button_save_text"
                            android:paddingTop="15dp"
                            android:layout_gravity="center"/>
                </LinearLayout>
            </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/greetings_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true" android:layout_alignParentStart="true"
            android:visibility="gone">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:orientation="vertical"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="15dp" android:layout_marginRight="15dp"
                      android:layout_centerVertical="true" android:layout_alignParentStart="true">
            <TextView
                    android:id="@+id/greetings_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/greetings_text"
                    android:gravity="center"
                    style="@style/TextAppeareance"
                    android:textSize="17sp"/>
            <TextView
                    android:id="@+id/link_to_FNS_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/link_to_FNS_app_text"
                    style="@style/TextAppeareance_Link"
                    android:gravity="center"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"/>
            <TextView
                    android:id="@+id/greetings_text_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/greetings_text_2"
                    android:gravity="center"
                    style="@style/TextAppeareance"
                    android:textSize="17sp"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp">
                <Button
                        android:id="@+id/cancel_registration_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btnCancel"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_marginEnd="15dp"/>
                <Button
                        android:id="@+id/show_registration_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btnOk"/>
            </LinearLayout>
            <TextView
                    android:id="@+id/greetings_text_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/greetings_text_3"
                    android:gravity="center"
                    style="@style/TextAppeareance"
                    android:textSize="17sp"/>
            <com.google.android.gms.common.SignInButton
                    android:id="@+id/signinGoogle"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:text="@string/googleloginText"
                    android:layout_marginTop="20dp"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" />
    </RelativeLayout>
</RelativeLayout>